<resources>
    <string name="app_name">Facbook</string>
    <string name="profile_name">Unbiast</string>
    <string name="post_time">2 hrs</string>
    <string name="likes_number">12</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="post_content">Buckle up, because change is coming to word press</string>
    <string name="share_numbers">1 Share</string>
</resources>